data/derived/comb/progs/unify/prog8464.ml.out
Characters 86-94:
  let fixpoint (f,b) = wwhile (let fin (f', b') = let nfb = f' b' in (nfb, nfb = b') in fin(f,b),b);;
                                                                                        ^^^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
